<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="vn.com.hcb.datn.MainActivity$PlaceholderFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/background"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/imgAvatar_tab1"
            android:layout_gravity="center"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/user40"/>
        <TextView
            android:paddingTop="5dp"
            android:layout_gravity="center"
            android:id="@+id/tvDangnhap"
            android:text="@string/dangnhap"
            android:textSize="18dp"
            android:textColor="@color/yellow"
            android:paddingLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="30dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_tab1user_margin"
        android:orientation="vertical"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_gravity="center"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/settings30"/>
        <TextView
            android:layout_gravity="center"
            android:id="@+id/tvaddService"
            android:text="@string/addservice"
            android:textSize="16dp"
            android:textColor="@color/black"
            android:paddingLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="40dp"
        android:background="@color/white_low"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_gravity="center"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/like30"/>
        <TextView
            android:layout_gravity="center"
            android:id="@+id/tvSaveadd"
            android:text="@string/saveadd"
            android:textSize="16dp"
            android:textColor="@color/black"
            android:paddingLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="40dp"
        android:background="@color/white_low"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_gravity="center"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/about30"/>
        <TextView
            android:layout_gravity="center"
            android:id="@+id/tvAboutme"
            android:text="@string/aboutme"
            android:textSize="16dp"
            android:textColor="@color/black"
            android:paddingLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="40dp"
        android:background="@color/white_low"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_gravity="center"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/settings30"/>
        <TextView
            android:layout_gravity="center"
            android:id="@+id/tvSetting"
            android:text="@string/setting"
            android:textSize="16dp"
            android:textColor="@color/black"
            android:paddingLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="40dp"
        android:background="@color/white_low"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/imgDangxuat"
            android:layout_gravity="center"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/logout30"/>
        <TextView
            android:layout_gravity="center"
            android:id="@+id/tvDangxuat"
            android:text="@string/dangxuat"
            android:textSize="16dp"
            android:textColor="@color/black"
            android:paddingLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    </LinearLayout>
</LinearLayout>
